--- a/dotff.html
+++ b/dotff.html
@@ -20,6 +20,7 @@
             </div>
             <div class="works fix">
                         <p><a class="grey bold" href="works.html">Works</a></p>
+                        <p class="grey"><a class="grey italic" href="ordine.html"> < 1 Ordine</a> | <a class="grey italic" href="immaginazione.html">3 Immaginazione ></a></p>
                         <h3 class="works" id="mtop">2 Dot</h3>
                         <p>
                             Disporre nove cerchi neri di 2 cm di diametro su un fondo bianco di lato 30 cm. Attenzione,
