--- a/gesto.html
+++ b/gesto.html
@@ -20,6 +20,7 @@
             </div>
             <div class="works">
                 <p><a class="grey bold" href="works.html">Works</a></p>
+                <p class="grey"><a class="grey italic" href="griglia.html"> < 6 Griglia</a> | <a class="grey italic" href="problemi.html">8 Problemi ></a></p>
                 <h3 class="works" id="mtop">7 Gesto</h3>
                 <p>
                     Cosa ci dicono le immagini? Come si sentono le immagini? La loro dimensione bidimensionale è rappresentativa di questo sentire? Il workshop Gesto indaga questi tre quesiti sviscerando la relazione tra ciò che l’immagine trasmette, attraverso i suoi elementi figurativi, e ciò che probabilmente vorrebbe comunicare, oltrepassando la sua dimensione figurativa per raggiungere quella emotiva. Attraverso l’utilizzo di differenti materiale i partecipanti hanno fatto emergere il significato dell’immagine.
