--- a/griglia.html
+++ b/griglia.html
@@ -20,6 +20,7 @@
             </div>
             <div class="works">
                         <p><a class="grey bold" href="works.html">Works</a></p>
+                        <p class="grey"><a class="grey italic" href="pattern.html"> < 5 Pattern</a> | <a class="grey italic" href="gesto.html">7 Gesto ></a></p>
                         <h3 class="works" id="mtop">6 Griglia</h3>
                         <p>
                             Dividi in parti uguali un foglio di 9x9 cm tracciando delle linee a mano libera da lato a lato in modo orizzontale e verticale. Non puoi far ruotare il foglio. L’obiettivo è allenare l’occhio a dividere lo spazio. Non ci sono vincoli temporali. Rilassati e concentrati. Fai almeno 3 serie seguendo le seguenti istruzioni. Alla fine dell’esercitazione seleziona le migliori.
