--- a/immaginazione.html
+++ b/immaginazione.html
@@ -20,6 +20,7 @@
             </div>
             <div class="works fix">
                         <p><a class="grey bold" href="works.html">Works</a></p>
+                        <p class="grey"><a class="grey italic" href="dotff.html"> < 2 Dot</a> | <a class="grey italic" href="tangram.html">4 Tangram ></a></p>
                         <h3 class="works" id="mtop">3 Immaginazione</h3>
                         <p>
                             L’immaginazione funziona meglio quando non la controlli. Lascia uno spago lungo 2 metri cadere a terra e guarda che forma assume. Cosa suggerisce questa linea? Immagina che lo spago voglia essere qualcosa. Hai 30 sec. per assegnare alla linea formata dallo spago il nome di una cosa. <br> <br>
