--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <p><a href="https://goo.gl/maps/GcMkPcTVqEyU9pY47" target="_blank">Milan, MI, Italy</a></p>
                 <p id="mtop">jetherpagaduan@gmail.com</p>
                 <p id="mtop1">
-                    Linkedin<br>
-                    Instagram<br>
+                    <a href="https://www.linkedin.com/in/jetherreypagaduan/" target="_blank">Linkedn</a><br>
+                    <a href="https://www.instagram.com/reypagaduan/" target="_blank">Instagram</a><br>
                     Behance</p>
             </div>
         </div>
