--- a/pattern.html
+++ b/pattern.html
@@ -20,6 +20,7 @@
             </div>
             <div class="works fix">
                         <p><a class="grey bold" href="works.html">Works</a></p>
+                        <p class="grey"><a class="grey italic" href="tangram.html"> < 4 Tangram</a> | <a class="grey italic" href="griglia.html">6 Griglia ></a></p>
                         <h3 class="works" id="mtop">5 Pattern</h3>
                         <p>
                             Esplora la città osservandola dal punto di vista grafico. Guarda in alto e poi in basso. Allena lo sguardo ad osservare il particolare e poi il generale. Osserva i palazzi, i tombini, le ringhiere, le crepe nell’asfalto come forme e non come oggetti. Cerca di guardare in bianco e nero, elimina il colore ed osserva la regolarità e l’irregolarità delle configurazioni che incontri per strada. Evita di fotografare le parole, fotografa ciò che si ripete e raccogli più pattern possibili ed infine scegline 5.
