--- a/problemi.html
+++ b/problemi.html
@@ -20,6 +20,7 @@
             </div>
             <div class="works">
                 <p><a class="grey bold" href="works.html">Works</a></p>
+                <p class="grey"><a class="grey italic" href="gesto.html"> < 7 Gesto</a> | <a class="grey italic" href="ordine.html">1 Ordine ></a></p>
                 <h3 class="works" id="mtop">8 Problemi</h3>
                 <p>
                     ?
