--- a/tangram.html
+++ b/tangram.html
@@ -20,6 +20,7 @@
             </div>
             <div class="works fix">
                         <p><a class="grey bold" href="works.html">Works</a></p>
+                        <p class="grey"><a class="grey italic" href="immaginazione.html"> < 3 Immaginazione</a> | <a class="grey italic" href="pattern.html">5 Pattern ></a></p>
                         <h3 class="works" id="mtop">4 Tangram</h3>
                         <p>
                             Crea 5 configurazioni astratte che ti piacciono, che sono interessanti per te e che attirano il tuo sguardo. Non creare composizioni figurative (casa, albero ecc…). Per ogni tavola devi utilizzare tutte e 7 le forme del Tangram. Esse non possono essere sovrapposte, ruotate o ribaltate. I numeri devo essere sempre letti diritti. Inoltre nessuna forma può uscire dalla tavola. Scegli 3 aggettivi per ogni tavola capaci di descrivere le configurazioni create.
