--- a/about.html
+++ b/about.html
@@ -50,11 +50,11 @@
                 </p>
             </div>
             <div class="grid_c grey">
-                <p>Milan, MI, Italy</p>
+                <p><a class="grey" href="https://goo.gl/maps/GcMkPcTVqEyU9pY47" target="_blank">Milan, MI, Italy</a></p>
                 <p class="grey" id="mtop">jetherpagaduan@gmail.com</p>
                 <p class="grey" id="mtop1">
-                    Linkedin<br>
-                    Instagram<br>
+                    <a class="grey" href="https://www.linkedin.com/in/jetherreypagaduan/" target="_blank">Linkedn</a><br>
+                    <a class="grey" href="https://www.instagram.com/reypagaduan/" target="_blank">Instagram</a><br>
                     Behance</p>
             </div>
         </div>
