--- a/ordinee.html
+++ b/ordinee.html
@@ -20,7 +20,7 @@
             </div>
             <div class="works">
                 <p><a class="grey bold" href="works.html">Works</a></p>
-                <p class="grey"><a class="grey italic" href="problemi.html"> < 8 Problemi</a> | <a class="grey italic" href="dotff.html">2 Dot ></a></p>
+                <p> <a class="grey italic" href="dotff.html">Prossimo Progetto ></a></p>
                 <h3 class="works" id="mtop">1 Ordine di lettura</h3>
                 <p>
                     Posizionare su un foglio A4 i numeri da 1 a 5 nella sequenza corretta da sinistra verso destra. Ciascun numero dovrà idealmente occupare una colonna verticale e può essere spostato lungo quest’asse verticale in alto e in basso, possono essere ruotate ma non ribaltate specularmente ne sovrapporsi. Lo scopo dell’esercizio è fare in modo che i numeri non vengano letti in ordine crescente dall’1 al 5 (12345). Esegui almeno 3 configurazioni definitive. (Fai molte prove, anche quelle verranno prese in considerazione). <br> <br> Riferimento: Giovanni Anceschi
